# server/openapi_server/models/user.py
@@ -6,10 +6,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model_ import Model
-# from openapi_server.models.entity import Entity
+from openapi_server.models.organization import Organization
 from openapi_server import util
 
-# from openapi_server.models.entity import Entity  # noqa: E501
+from openapi_server.models.organization import Organization  # noqa: E501
 
 class User(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -17,61 +17,56 @@ class User(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, username=None, first_name=None, last_name=None, email=None, id=None, created_by=None, created_at=None, updated_by=None, updated_at=None):  # noqa: E501
+    def __init__(self, id=None, username=None, password=None, first_name=None, last_name=None, email=None, role='user', organizations=None):  # noqa: E501
         """User - a model defined in OpenAPI
 
+        :param id: The id of this User.  # noqa: E501
+        :type id: str
         :param username: The username of this User.  # noqa: E501
         :type username: str
+        :param password: The password of this User.  # noqa: E501
+        :type password: str
         :param first_name: The first_name of this User.  # noqa: E501
         :type first_name: str
         :param last_name: The last_name of this User.  # noqa: E501
         :type last_name: str
         :param email: The email of this User.  # noqa: E501
         :type email: str
-        :param id: The id of this User.  # noqa: E501
-        :type id: int
-        :param created_by: The created_by of this User.  # noqa: E501
-        :type created_by: User
-        :param created_at: The created_at of this User.  # noqa: E501
-        :type created_at: datetime
-        :param updated_by: The updated_by of this User.  # noqa: E501
-        :type updated_by: User
-        :param updated_at: The updated_at of this User.  # noqa: E501
-        :type updated_at: datetime
+        :param role: The role of this User.  # noqa: E501
+        :type role: str
+        :param organizations: The organizations of this User.  # noqa: E501
+        :type organizations: List[Organization]
         """
         self.openapi_types = {
+            'id': str,
             'username': str,
+            'password': str,
             'first_name': str,
             'last_name': str,
             'email': str,
-            'id': int,
-            'created_by': User,
-            'created_at': datetime,
-            'updated_by': User,
-            'updated_at': datetime
+            'role': str,
+            'organizations': List[Organization]
         }
 
         self.attribute_map = {
+            'id': 'id',
             'username': 'username',
+            'password': 'password',
             'first_name': 'firstName',
             'last_name': 'lastName',
             'email': 'email',
-            'id': 'id',
-            'created_by': 'createdBy',
-            'created_at': 'createdAt',
-            'updated_by': 'updatedBy',
-            'updated_at': 'updatedAt'
+            'role': 'role',
+            'organizations': 'organizations'
         }
 
+        self._id = id
         self._username = username
+        self._password = password
         self._first_name = first_name
         self._last_name = last_name
         self._email = email
-        self._id = id
-        self._created_by = created_by
-        self._created_at = created_at
-        self._updated_by = updated_by
-        self._updated_at = updated_at
+        self._role = role
+        self._organizations = organizations
 
     @classmethod
     def from_dict(cls, dikt) -> 'User':
@@ -85,10 +80,30 @@ class User(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
+    def id(self):
+        """Gets the id of this User.
+
+
+        :return: The id of this User.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this User.
+
+
+        :param id: The id of this User.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
     def username(self):
         """Gets the username of this User.
 
-        User supplied username  # noqa: E501
 
         :return: The username of this User.
         :rtype: str
@@ -99,7 +114,6 @@ class User(Model):
     def username(self, username):
         """Sets the username of this User.
 
-        User supplied username  # noqa: E501
 
         :param username: The username of this User.
         :type username: str
@@ -110,6 +124,29 @@ class User(Model):
             raise ValueError("Invalid value for `username`, length must be greater than or equal to `4`")  # noqa: E501
 
         self._username = username
+
+    @property
+    def password(self):
+        """Gets the password of this User.
+
+
+        :return: The password of this User.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password):
+        """Sets the password of this User.
+
+
+        :param password: The password of this User.
+        :type password: str
+        """
+        if password is not None and len(password) < 3:
+            raise ValueError("Invalid value for `password`, length must be greater than or equal to `3`")  # noqa: E501
+
+        self._password = password
 
     @property
     def first_name(self):
@@ -131,8 +168,6 @@ class User(Model):
         :param first_name: The first_name of this User.
         :type first_name: str
         """
-        if first_name is None:
-            raise ValueError("Invalid value for `first_name`, must not be `None`")  # noqa: E501
         if first_name is not None and len(first_name) < 1:
             raise ValueError("Invalid value for `first_name`, length must be greater than or equal to `1`")  # noqa: E501
 
@@ -158,8 +193,6 @@ class User(Model):
         :param last_name: The last_name of this User.
         :type last_name: str
         """
-        if last_name is None:
-            raise ValueError("Invalid value for `last_name`, must not be `None`")  # noqa: E501
         if last_name is not None and len(last_name) < 1:
             raise ValueError("Invalid value for `last_name`, length must be greater than or equal to `1`")  # noqa: E501
 
@@ -191,114 +224,49 @@ class User(Model):
         self._email = email
 
     @property
-    def id(self):
-        """Gets the id of this User.
+    def role(self):
+        """Gets the role of this User.
 
-        ID  # noqa: E501
 
-        :return: The id of this User.
-        :rtype: int
+        :return: The role of this User.
+        :rtype: str
         """
-        return self._id
+        return self._role
 
-    @id.setter
-    def id(self, id):
-        """Sets the id of this User.
+    @role.setter
+    def role(self, role):
+        """Sets the role of this User.
 
-        ID  # noqa: E501
 
-        :param id: The id of this User.
-        :type id: int
+        :param role: The role of this User.
+        :type role: str
         """
-        if id is None:
-            raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
+        allowed_values = ["user", "admin"]  # noqa: E501
+        if role not in allowed_values:
+            raise ValueError(
+                "Invalid value for `role` ({0}), must be one of {1}"
+                .format(role, allowed_values)
+            )
 
-        self._id = id
+        self._role = role
 
     @property
-    def created_by(self):
-        """Gets the created_by of this User.
+    def organizations(self):
+        """Gets the organizations of this User.
 
 
-        :return: The created_by of this User.
-        :rtype: User
+        :return: The organizations of this User.
+        :rtype: List[Organization]
         """
-        return self._created_by
+        return self._organizations
 
-    @created_by.setter
-    def created_by(self, created_by):
-        """Sets the created_by of this User.
+    @organizations.setter
+    def organizations(self, organizations):
+        """Sets the organizations of this User.
 
 
-        :param created_by: The created_by of this User.
-        :type created_by: User
-        """
-
-        self._created_by = created_by
-
-    @property
-    def created_at(self):
-        """Gets the created_at of this User.
-
-        When the entity has been created  # noqa: E501
-
-        :return: The created_at of this User.
-        :rtype: datetime
-        """
-        return self._created_at
-
-    @created_at.setter
-    def created_at(self, created_at):
-        """Sets the created_at of this User.
-
-        When the entity has been created  # noqa: E501
-
-        :param created_at: The created_at of this User.
-        :type created_at: datetime
+        :param organizations: The organizations of this User.
+        :type organizations: List[Organization]
         """
 
-        self._created_at = created_at
-
-    @property
-    def updated_by(self):
-        """Gets the updated_by of this User.
-
-
-        :return: The updated_by of this User.
-        :rtype: User
-        """
-        return self._updated_by
-
-    @updated_by.setter
-    def updated_by(self, updated_by):
-        """Sets the updated_by of this User.
-
-
-        :param updated_by: The updated_by of this User.
-        :type updated_by: User
-        """
-
-        self._updated_by = updated_by
-
-    @property
-    def updated_at(self):
-        """Gets the updated_at of this User.
-
-        When the entity has been updated  # noqa: E501
-
-        :return: The updated_at of this User.
-        :rtype: datetime
-        """
-        return self._updated_at
-
-    @updated_at.setter
-    def updated_at(self, updated_at):
-        """Sets the updated_at of this User.
-
-        When the entity has been updated  # noqa: E501
-
-        :param updated_at: The updated_at of this User.
-        :type updated_at: datetime
-        """
-
-        self._updated_at = updated_at
+        self._organizations = organizations
